Fix eye + cultivos por campo

--- a/src/componentes/reusable/input_box/input_box.scss
+++ b/src/componentes/reusable/input_box/input_box.scss
@@ -78,6 +78,15 @@
   transform: translateY(-0.9rem);
   cursor: pointer;
 }
+
+.mostrar-ocultar-edit-perfil {
+  position: absolute;
+  top: 25.5rem;
+  right: 4.5rem;
+  transform: translateY(-0.9rem);
+  cursor: pointer;
+}
+
 .mostrar-ocultar-mini {
   position: absolute;
   top: 8.9rem;
