fix: main home texts

--- a/src/componentes/homePrincipal/homePrincipal.scss
+++ b/src/componentes/homePrincipal/homePrincipal.scss
@@ -162,8 +162,9 @@
 
 // LEFT ALIGNED
 .section-left-aligned{
-  width: 62%; 
+  width: 77%; 
   margin: 20px auto;
+  margin-left: 23vh;
 }
 
 .left{
