--- a/src/componentes/background/background.scss
+++ b/src/componentes/background/background.scss
@@ -2,7 +2,7 @@
 
 .gradient-background {
   min-height: 100vh;
-  height: 58.5rem;
+  height: 53rem;
   min-width: 80rem;
-  background: linear-gradient(to right,$verde-nuevo 60%, #3e8b42 40%);
+  background: linear-gradient(to bottom,#eaf3ea 50%, #81b483 50%);
 }
