--- a/src/componentes/reusable/boton/button.scss
+++ b/src/componentes/reusable/boton/button.scss
@@ -4,11 +4,11 @@
     background-color: $verde-oscuro;
     color: white;
     margin: 0.5%;
-    margin-top: 10px;
-    padding: 10px 30px;
-    border-radius: 20px;
+    margin-top: 0.2rem;
+    padding: 0.6rem 1.6rem;
+    border-radius: 1rem;
     cursor: pointer;
-    font-size: 20px;
+    font-size: 1.4rem;
     border: solid;
     border-style: 1px $verde-nuevo; 
     font-family: "Inter", sans-serif;
