--- a/src/componentes/iniciarSesion/iniciarSesion.scss
+++ b/src/componentes/iniciarSesion/iniciarSesion.scss
@@ -1,7 +1,7 @@
 @import '../../assets/global.scss';
 
 .green-text {
-    font-size: 20px; 
+    font-size: 1.3rem; 
     font-family: "Inter", sans-serif; 
     text-align: center;
     color: $verde-oscuro-nuevo;
@@ -9,7 +9,7 @@
 }
 
 .green-text:hover {
-    font-size: 20px; 
+    font-size: 1.3rem; 
     font-family: "Inter", sans-serif; 
     text-align: center;
     color: $verde-texto;
@@ -18,14 +18,14 @@
 }
 
 .texto-normal{
-    font-size: 20px; 
+    font-size: 1.3rem; 
     font-family: "Inter", sans-serif; 
     text-align: center;
     color: $gris-texto;
 }
 
 .registrate{
-    font-size: 20px; 
+    font-size: 1.3rem; 
     font-family: "Inter", sans-serif; 
     text-align: center;
     color: $gris-texto;
@@ -33,7 +33,7 @@
 }
 
 .registrate:hover{
-    font-size: 20px; 
+    font-size: 1.3rem; 
     font-family: "Inter", sans-serif; 
     text-align: center;
     color: $gris-texto;
@@ -42,11 +42,11 @@
 }
 
 .espacio{
-    margin-top: 30px;
+    margin-top: 1rem;
 }
 
 .espacio2{
-    margin-top: 55px;
+    margin-top: 0.5rem;
 }
 
 // COLUMNS
@@ -59,26 +59,26 @@
   margin: 0 auto;
   justify-content: center;
   //margin-bottom: 5vh;
-  margin-top: 5vh;
+  margin-top: 2.6rem;
 }
 
 .flexbox-container2 > div {
   width: 50%;
-  padding: 1.5vh;
+  padding: 0.7rem;
   text-align: center; 
   //display: flex;
   //flex-direction: column;
   justify-content: center;
-  padding-top: 5vh;
+  padding-top: 2.6rem;
 }
 
 .flexbox-container2 > div:first-child {
-	margin-right: 1.5vh;
+	margin-right: 0.7rem;
 }
 
 .flexbox-container2 > div + div {
-  border-left: 0.40vh solid #ccc;
-  padding-left: 3vh;
+  border-left: 0.2rem solid #ccc;
+  padding-left: 1.5rem;
 }
 
 .agroia2{
@@ -86,8 +86,8 @@
     //flex-wrap: nowrap;
     align-items: center;
     //justify-content: center;
-    margin-bottom: 5vh;
-    margin-left: 17vh;
+    margin-bottom: 2.5rem;
+    margin-left: 8.5rem;
 }
 
 .agroia2:hover{
@@ -113,5 +113,5 @@
     text-align: center;
     color: $gris-texto;
     font-weight: bold;
-    margin-top: 4vh;
+    margin-top: 2rem;
 }
