--- a/src/componentes/reusable/white_container/white_container.scss
+++ b/src/componentes/reusable/white_container/white_container.scss
@@ -3,14 +3,31 @@
 
 .white-rectangle {
     background-color: white;
-    height: 38.5rem;
+    height: 36rem;
     width: 70rem;
     margin: auto;
     position: absolute;
     top: 7rem;
     left: 0;
     right: 0;
-    border-radius: 1.5vh;
+    border-radius: 0.75rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start; 
+    box-shadow: 1vh 1vh 2vh rgba(0, 0, 0, 0.2);
+  }
+
+  .white-rectangle2 {
+    background-color: white;
+    height: 39rem;
+    width: 70rem;
+    margin: auto;
+    position: absolute;
+    top: 7rem;
+    left: 0;
+    right: 0;
+    border-radius: 0.75rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -33,14 +50,14 @@
 
   .invisible-white-rectangle {
     background-color: white;
-    height: 38.5rem;
+    height: 36rem;
     width: 70rem;
     margin: auto;
     position: absolute;
     top: 7rem;
     left: 0;
     right: 0;
-    border-radius: 2.5vh;
+    border-radius: 1.3rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -56,7 +73,7 @@
     top: 11.7rem;
     left: 0;
     right: 0;
-    border-radius: 2.5vh;
+    border-radius: 1.3rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -71,7 +88,7 @@
     width: 2.5rem;
     background-color: #F1FFFA;
     margin-bottom: 3rem;
-    border-radius: 2vh;
+    border-radius: 1rem;
     border: 0vh #F1FFFA;
   }
 
@@ -83,7 +100,7 @@
     width: 2.5rem;
     background-color: #fff5f1;
     margin-bottom: 3rem;
-    border-radius: 2vh;
+    border-radius: 1rem;
     border: 0vh #F1FFFA;
   }
 
@@ -95,7 +112,7 @@
     width: 2.5rem;
     background-color: #F1FFFA;
     margin-bottom: 3rem;
-    border-radius: 2vh;
+    border-radius: 1rem;
     border: 0vh #F1FFFA;
   }
 
