--- a/src/componentes/iniciarSesion/iniciarSesion.scss
+++ b/src/componentes/iniciarSesion/iniciarSesion.scss
@@ -104,7 +104,7 @@
     font-family: "Inter", sans-serif; 
     text-align: center;
     color: $gris-texto;
-    font-weight: bold;
+    //font-weight: bold;
 }
 
 .title-inicio2{
