--- a/src/componentes/reusable/white_container/white_container.scss
+++ b/src/componentes/reusable/white_container/white_container.scss
@@ -46,12 +46,13 @@
     right: 0;
     margin-bottom: 2.4rem;
     margin-top: 1.7rem;
+    font-weight: bold;
   }
 
   .invisible-white-rectangle {
     background-color: white;
     height: 36rem;
-    width: 70rem;
+    width: 35rem;
     margin: auto;
     position: absolute;
     top: 7rem;
