fix: editar perfil

--- a/src/componentes/reusable/input_box/input_box.scss
+++ b/src/componentes/reusable/input_box/input_box.scss
@@ -85,8 +85,8 @@
 
 .mostrar-ocultar-edit-perfil {
   position: absolute;
-  top: 25.5rem;
-  right: 4.5rem;
+  bottom: 8.6rem;
+  left: 27.6rem;
   transform: translateY(-0.9rem);
   cursor: pointer;
 }
