--- a/src/componentes/reusable/white_container/white_container.scss
+++ b/src/componentes/reusable/white_container/white_container.scss
@@ -35,6 +35,22 @@
     box-shadow: 1vh 1vh 2vh rgba(0, 0, 0, 0.2);
   }
 
+  .white-rectangle3 {
+    background-color: white;
+    height: 34rem;
+    width: 60rem;
+    margin: auto;
+    position: absolute;
+    top: 10rem;
+    left: 0;
+    right: 0;
+    border-radius: 0.75rem;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start; 
+    box-shadow: 1vh 1vh 2vh rgba(0, 0, 0, 0.2);
+  }
+
   .container-text {
     font-size: 2.3rem; 
     font-family: "Inter", sans-serif; 
