fix: comments de eze

--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -11,8 +11,8 @@ $celeste-link: #0085FF;
 $gris-texto: #535353;
 $gris-titulo: #464E47;
 
-$verde-nuevo: #2a7d2e;
-$verde-oscuro-nuevo: #124a2f;
+$main-green: #2a7d2e;
+$main-dark-green: #124a2f;
 
 
 //degradado 
