--- a/src/componentes/iniciarSesion/iniciarSesion.scss
+++ b/src/componentes/iniciarSesion/iniciarSesion.scss
@@ -4,7 +4,7 @@
     font-size: 1.3rem; 
     font-family: "Inter", sans-serif; 
     text-align: center;
-    color: $verde-oscuro-nuevo;
+    color: $main-dark-green;
     font-weight: bold;
 }
 
