Si digo todo rem es todo rem FIX

--- a/src/componentes/reusable/boton/button.scss
+++ b/src/componentes/reusable/boton/button.scss
@@ -3,7 +3,7 @@
 .green-button {
     background-color: $verde-oscuro;
     color: white;
-    margin: 0.5%;
+    margin: 0.07rem;
     margin-top: 0.2rem;
     padding: 0.6rem 1.6rem;
     border-radius: 1rem;
