--- a/src/componentes/homePrincipal/homePrincipal.scss
+++ b/src/componentes/homePrincipal/homePrincipal.scss
@@ -16,7 +16,7 @@
   // IMAGES
 
   .full-width-image{
-    width: 100%; //100%
+    width: 115.5rem; //100%
     height: 26rem;
     object-fit: cover;
     opacity: 0.6;
@@ -26,7 +26,7 @@
 
   .img-container{
     position: relative; 
-    width: 100%; //100%
+    width: 115.5rem; //100%
     overflow: hidden;
     height: 26rem;
     margin-bottom: 2.6rem;
@@ -36,13 +36,13 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 500rem;
+    height: 500rem;
     background: rgba(0, 0, 0, 0.5); 
   }
 
   .header-principal{
-    width: 100%;
+    width: 115.5rem;
     //margin-top: 0%;
     background-color: white;
     height: 7rem;
@@ -55,7 +55,7 @@
 .image-text {
   position: absolute;
   top: 0;
-  left: 0;
+  left: 7rem;
   width: 100rem;
   height: 25rem;
   display: flex;
@@ -84,13 +84,12 @@
 // COLUMNS
 
 .flexbox-container {
-	display: -ms-flex;
-	display: -webkit-flex;
-	display: flex;
+  display: -ms-flex;
+  display: -webkit-flex;
+  display: flex;
   max-width: 100rem;
-  margin: 0 auto;
-  justify-content: center;
   margin-bottom: 2.6rem;
+  margin-left: 5rem; /* Ajustar el valor del margen izquierdo */
 }
 
 .flexbox-container > div {
@@ -140,7 +139,7 @@
 .gray-square{
   width: 83.2rem; 
   height: 26rem; 
-  margin: 0 auto;
+  margin-left: 17rem;
   background-color: #eaf3ea; 
   margin-top: 4rem;
   margin-bottom: 4rem;
@@ -170,7 +169,7 @@
   //margin-left: 11rem;
   justify-content: center;
   align-items: center;
-  margin-left: 35rem;
+  margin-left: 20rem;
 }
 
 .small-img2{
@@ -237,4 +236,21 @@
   margin-top: 3rem;
   padding-bottom: 1.5rem;
   padding-top: 1rem;
+}
+
+.flexbox-container{
+  margin-left: 25rem;
+}
+
+.footer-ppal {
+    background-color: #85aa87;
+    padding: 10px;
+    text-align: center;
+    width:114.2rem;
+    height: 5rem;
+  }
+
+.footer-text-ppal{
+  font-size: 15px; 
+  font-family: "Inter", sans-serif; 
 }
