--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -10,6 +10,8 @@ $verde-texto: #568259;
 $celeste-link: #0085FF;
 $gris-texto: #535353;
 $gris-titulo: #464E47;
+$gris-input-to-fill: #888;
+$black-shadows: rgba(0, 0, 0, 0.2);
 
 $main-green: #2a7d2e;
 $main-dark-green: #124a2f;
