--- a/src/componentes/reusable/green-logo/green-logo.scss
+++ b/src/componentes/reusable/green-logo/green-logo.scss
@@ -14,14 +14,14 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.2);
+    box-shadow: 5px 5px 20px $black-shadows;
   }
 
   .green-rectangle:hover{
     cursor: pointer;
   }
 
-  .text-coso-verde {
+  .text-green-rectangle {
     font-size: 2.7rem;
     font-family: "Inter", sans-serif;
     font-weight: bold;
