--- a/src/componentes/reusable/white_container/white_container.scss
+++ b/src/componentes/reusable/white_container/white_container.scss
@@ -15,7 +15,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: flex-start; 
-    box-shadow: 1vh 1vh 2vh rgba(0, 0, 0, 0.2);
+    box-shadow: 1vh 1vh 2vh $black-shadows;
   }
 
   .white-rectangle2 {
@@ -32,7 +32,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: flex-start; 
-    box-shadow: 1vh 1vh 2vh rgba(0, 0, 0, 0.2);
+    box-shadow: 1vh 1vh 2vh $black-shadows;
   }
 
   .white-rectangle3 {
@@ -48,7 +48,7 @@
     display: flex;
     align-items: center;
     justify-content: flex-start; 
-    box-shadow: 1vh 1vh 2vh rgba(0, 0, 0, 0.2);
+    box-shadow: 1vh 1vh 2vh $black-shadows;
   }
 
   .container-text {
@@ -63,22 +63,6 @@
     margin-bottom: 2.4rem;
     margin-top: 1.7rem;
     font-weight: bold;
-  }
-
-  .invisible-white-rectangle {
-    background-color: white;
-    height: 36rem;
-    width: 35rem;
-    margin: auto;
-    position: absolute;
-    top: 7rem;
-    left: 0;
-    right: 0;
-    border-radius: 1.3rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start; 
   }
 
   .small-white-rectangle {
