--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -12,6 +12,9 @@ $gris-texto: #535353;
 $gris-titulo: #464E47;
 $gris-input-to-fill: #888;
 $black-shadows: rgba(0, 0, 0, 0.2);
+$gris-tarjetas-fondo-infoCampos: rgb(244, 236, 236);
+$blue-titles-infoCampo: #3C76F2;
+$color-circulo-verde: #C7F6D2;
 
 $main-green: #2a7d2e;
 $main-dark-green: #124a2f;
