fix: colors in color file

--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -19,6 +19,9 @@ $color-circulo-verde: #C7F6D2;
 $main-green: #2a7d2e;
 $main-dark-green: #124a2f;
 
+$background-green-dark:#81b483;
+$footer-light-green:rgb(213, 238, 213);
+
 
 //degradado 
 $verde-claro-iniciar-sesion: #CCFCCB;
