--- a/src/componentes/background/background.scss
+++ b/src/componentes/background/background.scss
@@ -4,5 +4,5 @@
   min-height: 100vh;
   height: 53rem;
   min-width: 80rem;
-  background: linear-gradient(to bottom,#eaf3ea 50%, #81b483 50%);
+  background: linear-gradient(to bottom,$footer-light-green 50%, $background-green-dark 50%);
 }
