--- a/src/componentes/editarPerfil/editarPerfil.scss
+++ b/src/componentes/editarPerfil/editarPerfil.scss
@@ -18,7 +18,7 @@
     min-height: 100vh;
     height: 40rem;
     min-width: 80rem;
-    background-color: #d1f3d1; 
+    background-color: $footer-light-green; 
   }
 
 .flexbox-container4{
