--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,10 @@
   text-align: center;
 }
 
-@media screen and (max-width:80em) {
+/* @media screen and (max-width:80em) {
   .App{
     width: 100rem;
     margin: 0;
     height: 130rem;
 }
-}
+} */
