--- a/src/componentes/infoCampo/infoCampo.scss
+++ b/src/componentes/infoCampo/infoCampo.scss
@@ -1,5 +1,6 @@
 @import "../../assets/global.scss";
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400&display=swap');
+@import '~bootstrap/dist/css/bootstrap.min.css';
 
 .buttons-container {
   display: flex;
