--- a/src/componentes/homePrincipal/homePrincipal.scss
+++ b/src/componentes/homePrincipal/homePrincipal.scss
@@ -33,6 +33,10 @@
     overflow: hidden;
     height: 26rem;
     margin-bottom: 2.6rem;
+    background-image: url('../../images/grass3.jpg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
   }
 
   .overlay {
@@ -56,7 +60,7 @@
 }
 
 .image-text {
-  position: absolute;
+  position: relative;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
