Tarjetas meli mas lindas

--- a/src/componentes/infoCampo/infoCampo.scss
+++ b/src/componentes/infoCampo/infoCampo.scss
@@ -154,6 +154,7 @@
   justify-content: center;
   width: 90rem; /* Ajusta el valor según tus necesidades */
   margin: -1rem auto; /* Utiliza "auto" para centrar horizontalmente */
+   height: 27.5rem;
 }
 
 .nombre-producto {
