fix: ahora se ve bien :)

--- a/src/componentes/homePrincipal/homePrincipal.scss
+++ b/src/componentes/homePrincipal/homePrincipal.scss
@@ -14,15 +14,15 @@
 
   .full-page{
     min-height: 92vh; 
-    min-width: 90vw;
+    //min-width: 90%;
   }
 
 
   // IMAGES
 
   .full-width-image{
-    width: 100%; //100%
-    height: 26rem;
+    width: 80rem;
+    height: 17rem;
     object-fit: cover;
     opacity: 0.6;
   }
@@ -30,9 +30,9 @@
   .img-container{
     position: relative; 
     width: 100%; //100%
-    min-width: 100rem;
+    min-width: 80rem;
     overflow: hidden;
-    height: 26rem;
+    height: 17rem;
     margin-bottom: 2.6rem;
     background-image: url('../../images/grass3.jpg');
     background-repeat: no-repeat;
@@ -45,16 +45,16 @@
     top: 0;
     left: 0;
     width: 100%;
-    min-width: 100rem;
+    min-width: 80rem;
     height: 100%;
     background: rgba(0, 0, 0, 0.5); 
   }
 
   .header-principal{
     width: 100%;
-    min-width: 100rem;
+    min-width: 80rem;
     background-color: white;
-    height: 7rem;
+    height: 5.5rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -65,8 +65,8 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 100rem;
-  height: 25rem;
+  width: 80rem;
+  height: 15rem;
   display: flex;
   justify-content: center; 
   align-items: center;
@@ -76,14 +76,14 @@
 }
 
 .image-title{
-  font-size: 4rem; 
+  font-size: 3rem; 
   color: white;
   font-weight: bold;
   font-family: "Inter", sans-serif;
 }
 
 .image-text2{
-  font-size: 2.7rem; 
+  font-size: 2rem; 
   color: white;
   width: 40rem;
   font-family: "Inter", sans-serif;
@@ -96,8 +96,7 @@
 	display: -ms-flex;
 	display: -webkit-flex;
 	display: flex;
-  max-width: 100rem;
-  min-width: 100rem;
+  min-width: 80rem;
   margin: 0 auto;
   justify-content: center;
   margin-bottom: 2.6rem;
@@ -125,7 +124,7 @@
 // TEXTS
 .green-title{
   color: $main-green;
-  font-size: 3.12rem; 
+  font-size: 2.2rem; 
   font-weight: bold;
   font-family: "Inter", sans-serif;
 }
@@ -133,7 +132,7 @@
 .gray-title{
   color: $gris-texto;
   width: 40rem;
-  font-size: 2.6rem; 
+  font-size: 2.2rem; 
   font-weight: bold;
   font-family: "Inter", sans-serif;
 }
@@ -141,15 +140,23 @@
 .text-home-principal{
   color: $gris-texto;
   width: 35rem;
-  font-size: 1.56rem; 
+  font-size: 1.5rem; 
+  font-family: "Inter", sans-serif;
+  margin: 0.19rem 0;
+}
+
+.text-home-principal2{
+  color: $gris-texto;
+  width: 35rem;
+  font-size: 1.2rem; 
   font-family: "Inter", sans-serif;
   margin: 0.19rem 0;
 }
 
 // GRAY BOX
 .gray-square{
-  width: 83.2rem;
-  height: 26rem;
+  width: 70rem;
+  height: 20rem;
   margin: 0 auto;
   background-color: #eaf3ea;
   margin-top: 4rem;
@@ -161,8 +168,8 @@
 }
 
 .small-img{
-  width: 37rem; 
-  height: 20rem;
+  width: 30rem; 
+  height: 15rem;
   margin-left: 4rem;
 }
 
@@ -179,15 +186,15 @@
 .section-left-aligned{
   width: 100rem; 
   display: flex;
-  max-width: 75rem;
+  max-width: 65rem;
   margin: 0 auto;
   justify-content: space-between;
   align-items: center;
 }
 
 .small-img2{
-  width: 30rem; 
-  margin-left: 5rem;
+  width: 22rem; 
+  margin-left: 2rem;
 }
 
 .left{
@@ -201,7 +208,7 @@
 }
 
 .extra-reason {
-  margin-left: 4rem;
+  margin-left: 3.3rem;
 }
 
 .checks{
@@ -226,7 +233,7 @@
 
 .text-home-2{
   color: $gris-texto;
-  font-size: 1.5rem; 
+  font-size: 1.2rem; 
   font-family: "Inter", sans-serif;
   margin: 0.19rem 0;
 }
@@ -245,7 +252,7 @@
 .footer{
   background-color: $footer-light-green;
   margin-top: 4rem;
-  padding-bottom: 2rem;
-  padding-top: 2rem;
-  min-width: 100rem;
+  padding-bottom: 1rem;
+  padding-top: 1rem;
+  min-width: 80rem;
 }
